snippet-service-apis completed